--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web APIs Challenge: Code Quiz</title>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/css/style.css">
+  </head>
+  <body>
     <section class="section">
       <div class="container">
-        <h1 class="title">
-          Hello World
-        </h1>
-        <p class="subtitle">
-          My first website with <strong>Bulma</strong>!
-        </p>
+        <h1 class="title">Code Quiz</h1>
+        <p class="subtitle">JavaScript Quiz</p>
+        <button class="button is-primary button is-large is-responsiv">Start Now</button>
       </div>
     </section>
+    <script src="./assets/js/script.js"></script>
     </body>
   </html>
