--- a/index.html
+++ b/index.html
@@ -11,13 +11,32 @@
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
   <body>
-    <section class="section">
+    <header class="hero is-dark">
+      <div class="hero-body">
+        <h1 class="title">Code Quiz</h1>
+        <h2 class="subtitle">
+          Primary subtitle
+        </h2>
+      </div>
+    </header>
+    <section class="section is-large">
       <div class="container">
         <h1 class="title">Code Quiz</h1>
         <p class="subtitle">JavaScript Quiz</p>
-        <button class="button is-primary button is-large is-responsiv">Start Now</button>
+        <button class="button is-info button is-large is-responsiv">Start Now</button>
       </div>
     </section>
+    <footer id="footer" class="display-4 center-items">
+      <p>
+          
+      </p>
+  </footer>
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Code Quiz</strong> by <a href="https://github.com/xkolsha" target="_blank">&copy; 2023 Aviad Kohn</a>. The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</p>
+    </div>
+  </footer>
     <script src="./assets/js/script.js"></script>
     </body>
   </html>
