--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <footer class="footer">
     <div class="content has-text-centered">
       <p>
-        <strong>Code Quiz</strong> by <a href="https://github.com/xkolsha" target="_blank">&copy; 2023 Aviad Kohn</a>. The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.</p>
+        <strong>Code Quiz</strong> by <a href="https://github.com/xkolsha" target="_blank" rel="noopener noreferrer">&copy; 2023 Aviad Kohn</a> The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a></p>
     </div>
   </footer>
     <script src="./assets/js/script.js"></script>
