--- a/index.html
+++ b/index.html
@@ -13,28 +13,26 @@
   <body>
     <header class="hero is-dark">
       <div class="hero-body">
-        <h1 class="title">Code Quiz</h1>
-        <h2 class="subtitle">
-          Primary subtitle
-        </h2>
+        <h1 class="title has-text-warning">JavaScript Quiz</h1>
+        <h2 class="subtitle py-3">Good luck and have fun!</h2>
+        <div id="timer" class="timer">Timer: </div>
       </div>
     </header>
-    <section class="section is-large">
+    <section class="section is-large has-background-warning-light content">
       <div class="container">
-        <h1 class="title">Code Quiz</h1>
-        <p class="subtitle">JavaScript Quiz</p>
-        <button class="button is-info button is-large is-responsiv">Start Now</button>
+        <h1 class="title column">JavaScript Quiz</h1>
+        <p class="subtitle column">Welcome to the JavaScript Quiz! You have 10 minutes to answer 10 questions. Don't worry, they are all easy and fun.
+          <div class="column"><button id="start-button" class="button is-warning button is-large is-responsiv">Start Now</button></div>
+        <div id="question-container" class="column"></div>
+        <div id="choices-container" class="column"></div>
       </div>
     </section>
-    <footer id="footer" class="display-4 center-items">
-      <p>
-          
-      </p>
-  </footer>
-  <footer class="footer">
+    <footer id="footer" class="center-items"></footer>
+  <footer class="footer p-6">
     <div class="content has-text-centered">
       <p>
-        <strong>Code Quiz</strong> by <a href="https://github.com/xkolsha" target="_blank" rel="noopener noreferrer">&copy; 2023 Aviad Kohn</a> The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a></p>
+        <strong>Code Quiz</strong> by <a href="https://github.com/xkolsha" target="_blank" rel="noopener noreferrer">&copy; 2023 Aviad Kohn</a> The source code is licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>
+      </p>
     </div>
   </footer>
     <script src="./assets/js/script.js"></script>
