--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
-  <body>
+  <body class="has-background-warning-light">
     <header class="hero is-dark">
       <div class="hero-body">
         <h1 class="title has-text-warning">JavaScript Quiz</h1>
@@ -18,7 +18,7 @@
         <div id="timer" class="timer">Timer: </div>
       </div>
     </header>
-    <section class="section is-large has-background-warning-light content">
+    <section class="section is-large content">
       <div class="container">
         <h1 class="title column">JavaScript Quiz</h1>
         <p class="subtitle column">Welcome to the JavaScript Quiz! You have 10 minutes to answer 10 questions. Don't worry, they are all easy and fun.
