updated timer design

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <div class="hero-body">
         <h1 class="title has-text-warning">JavaScript Quiz</h1>
         <h2 class="subtitle py-3">Good luck and have fun!</h2>
-        <div id="timer" class="timer">Timer: </div>
       </div>
+      <div id="timer" class="notification is-warning is-size-4 has-text-centered">Timer: </div>
     </header>
     <section class="section is-large content">
       <div class="container">
