--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="section is-large content">
       <div class="container">
         <h1 class="title column">JavaScript Quiz</h1>
-        <p id="subtitle-hero" class="subtitle column">Welcome to the JavaScript Quiz! You have 10 minutes to answer 10 questions. Don't worry, they are all easy and fun.
+        <p id="subtitle-hero" class="subtitle column">Welcome to the JavaScript Quiz! You have 1 minute to answer 10 questions. Don't worry, they are all easy and fun.
           <div class="column"><button id="start-button" class="button is-warning button is-large is-responsiv">Start Now</button></div>
         <div id="question-container" class="column"></div>
         <div id="choices-container" class="column"></div>
